--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -10,22 +10,32 @@
         <h3>My name is Suzanne Milligan.</h3><br>
         <p>I am currently studying for a Master's degree in computing at Cardiff University. Before I was a student at Cardiff I 
             worked in various IT support roles for more than 20 years. My last role was as a Schools ICT Engineer, which involved 
-            travelling to different primary schools in Bridgend County to offer ICT support.</p></br>
+            travelling to different primary schools in Bridgend County to offer ICT support.
+        </p><br>
 
         <p>I have been interested in computers and computing for a long time - since the days of the Commodore-64 in fact! 
             I studied for my Undergraduate degree in Materials Science and Engineering at Imperial College in London. After my
-            degree I worked in various laboratories for around 5 years. In 1999 I moved to Scotland and changed my career by studying 
+            degree I worked in various laboratories. In 1999 I moved to Scotland and changed my career by studying 
             for my MCSE (in NT4!). My first job in IT was at St Margaret University in Edinburgh, as a Helpdesk Officer. From there I progressed
             to IT Officer to Senior IT Officer. I moved to Wales in 2006 and worked at Pencoed Comprehensive as an ICT Technician for 10 years
-            before changing to primary school support.</p>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>    
-
-    
-    </div>
+            before changing to primary school support.
+        </p>
+      
+        <h3>Contact</h3>
+        <div class="row">
+            <div class="col">
+                <a href="https://www.facebook.com/sue.milligan" target="_blank"><span class="material-icons md-dark md-36">facebook</span></a>
+                <a href="https://www.facebook.com/sue.milligan" target="_blank">Facebook</a>
+            </div>
+            <div class="col">
+                <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank"><span class="material-icons md-dark md-36">link</span></a>
+                <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank">LinkedIn</a>    
+            </div>    
+            <div class="col">
+                <a href="mailto:milligansp@cardiff.ac.uk"><span class="material-icons md-dark md-36">email</span></a>
+                <a href="mailto:milligansp@cardiff.ac.uk">Email me</a>
+            </div>
+        </div>       
+    </div>             
 </div>    
 {% endblock content%}
