--- a/blog/templates/allposts.html
+++ b/blog/templates/allposts.html
@@ -4,8 +4,9 @@
 <div class = "mx-auto" style="width:80%">
     
         <h3>All Posts</h3>
-        To arrange files by date please click here <a href="{{url_for('ascpost')}}">for <b>ascending</b> order.</a>
+        To arrange files by date please click here <a href="{{url_for('ascpost')}}">for <b>ascending</b> order</a>
         and please click here <a href="{{url_for('descpost')}}" >for <b>descending</b> order.</a>
+        <br>
         <br>
 
 
