--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -10,7 +10,7 @@
       {% endif %}
   <div class="container-fluid">
     <form method="post">
-      <div class="pt-2 ps-1 pe-5 mb-5 pt-2">
+      <div class="pt-2 ps-1 pe-5 mb-5 pt-5">
       
           <label for="searchSite" class="form-label"><b>{{ form.search.label }}</b></label>
                     
@@ -48,7 +48,8 @@
       </div>    
        
       <div class = "allpostslink">
-        <h3><a href ="{{ url_for('allposts') }}" >To access all posts </a> </h3>
+        <h4><a href ="{{ url_for('allposts') }}" >To access all posts </a> </h4>
+        <small>Note: All photos &#169; Suzanne Milligan, exceptions are stated and credited in individual blog posts.  
       </div> 
    
 {% endblock content %}
