--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -49,7 +49,8 @@
        
       <div class = "allpostslink">
         <h4><a href ="{{ url_for('allposts') }}" >To access all posts </a> </h4>
-        <small>Note: All photos &#169; Suzanne Milligan, exceptions are stated and credited in individual blog posts.  
+        <small>Note: All photos &#169; Suzanne Milligan, exceptions are stated and credited in individual blog posts.<br>
+               All post text is &#169; Suzanne Milligan, all opinions are those of the author and not necessary shared by any organisations that they are employed by or affiliated with.</small>
       </div> 
    
 {% endblock content %}
