--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -135,23 +135,25 @@
         </div>
     </div>
     <footer>
-        <div class="row">
-            <div class="col">
-                <a href="https://www.facebook.com/sue.milligan" target="_blank"><span class="material-icons md-dark md-36">facebook</span></a>
-                <a href="https://www.facebook.com/sue.milligan" target="_blank">Facebook</a>
+        <div class="container device-width">
+            <div class="row">
+                <div class="col">
+                    <a href="https://www.facebook.com/sue.milligan" target="_blank"><span class="material-icons md-dark md-36">facebook</span></a>
+                    <a href="https://www.facebook.com/sue.milligan" target="_blank">Facebook</a>
+                </div>
+                <div class="col">
+                    <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank"><span class="material-icons md-dark md-36">link</span></a>
+                    <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank">LinkedIn</a>    
+                </div>    
+                <div class="col">
+                    <a href="mailto:milligansp@cardiff.ac.uk"><span class="material-icons md-dark md-36">email</span></a>
+                    <a href="mailto:milligansp@cardiff.ac.uk">Email me</a>
+                </div>
+                <div class="col">
+                    <p>&#169; 2021.Built by Suzanne Milligan.</p>
+                </div>
             </div>
-            <div class="col">
-                <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank"><span class="material-icons md-dark md-36">link</span></a>
-                <a href="https://www.linkedin.com/in/suzanne-milligan-48264598/" target="_blank">LinkedIn</a>    
-            </div>    
-            <div class="col">
-                <a href="mailto:milligansp@cardiff.ac.uk"><span class="material-icons md-dark md-36">email</span></a>
-                <a href="mailto:milligansp@cardiff.ac.uk">Email me</a>
-            </div>
-            <div class="col">
-                <p>&#169; 2021.Built by Suzanne Milligan.</p>
-            </div>
-        </div>   
+        </div>       
     </footer>   
 
     <!-- links to the javascript files needed for bootstrap to run  -->
