--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <!-- link to bootstrap css stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- end of commented code -->
     <!-- link to local stylesheet -->
     <link rel=stylesheet type=text/css href="{{ url_for('static',filename='style.css') }}">
+    <!-- end of commented code -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- connecting to google api for fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,8 +16,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet"> 
+    <!-- end of commented code -->
     <!-- link to connecting to google api for icon font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- end of commented code -->
     <!-- my favicon            -->
     <link rel = "icon" href = "{{url_for('static', filename='img/favicon.ico')}}" >
     <title>Sue Milligan</title>
@@ -159,7 +163,7 @@
     <!-- links to the javascript files needed for bootstrap to run  -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-
+    <!-- end of commented code -->
 </body>
 
 </html>
